LU-5010 llite: disable readahead optimization

There exists a race between readahead lock matching and lock
cancellation, where it's difficult to discard pages from radix
tree if readahead process keeps adding pages.

This issue is introduced in patch http://review.whamcloud.com/8523
here I'm going to disable it. The optimization will be added
back in later patch.

Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: Ifa729bfc4404ac287d4af3a88ead4790218817f8
Reviewed-on: http://review.whamcloud.com/10220
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Bobi Jam <bobijam@gmail.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>